openshift/base/inventory-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-service
  namespace: microservices
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inventory-service
  template:
    metadata:
      labels:
        app: inventory-service
    spec:
      serviceAccountName: inventory-service-sa
      containers:
        - name: inventory-service
          image: clementbonal/microservice-project_inventory-service:v2
          ports:
            - containerPort: 3003
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
            runAsNonRoot: true
            # OpenShift will assign a random UID in the restricted range
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  name: inventory-service
  namespace: microservices
spec:
  ports:
    - port: 3003
  selector:
    app: inventory-service
