openshift/base/orders-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-service
  namespace: microservices
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orders-service
  template:
    metadata:
      labels:
        app: orders-service
    spec:
      serviceAccountName: orders-service-sa
      containers:
        - name: orders-service
          image: clementbonal/microservice-project_orders-service:v3.3
          ports:
            - containerPort: 3002
          volumeMounts:
            - name: kafka-client-secrets
              mountPath: /etc/kafka/secrets/ca-cert.pem
              subPath: ca-cert.pem
              readOnly: true
            - name: kafka-client-secrets
              mountPath: /etc/kafka/secrets/orders-service-key.pem
              subPath: orders-service-key.pem
              readOnly: true
            - name: kafka-client-secrets
              mountPath: /etc/kafka/secrets/orders-service-certificate.pem
              subPath: orders-service-certificate.pem
              readOnly: true
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
            runAsNonRoot: true
            # OpenShift will assign a random UID in the restricted range
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "200m"
      volumes:
        - name: kafka-client-secrets
          secret:
            secretName: orders-service-kafka-secrets
---
apiVersion: v1
kind: Service
metadata:
  name: orders-service
  namespace: microservices
spec:
  ports:
    - port: 3002
  selector:
    app: orders-service
