openshift/base/users-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-service
  namespace: microservices
spec:
  replicas: 1
  selector:
    matchLabels:
      app: users-service
  template:
    metadata:
      labels:
        app: users-service
    spec:
      serviceAccountName: users-service-sa
      containers:
        - name: users-service
          image: clementbonal/microservice-project_users-service:v3.1
          ports:
            - containerPort: 3001
          volumeMounts:
            - name: kafka-client-secrets
              mountPath: /etc/kafka/secrets/ca-cert.pem
              subPath: ca-cert.pem
              readOnly: true
            - name: kafka-client-secrets
              mountPath: /etc/kafka/secrets/users-service-key.pem
              subPath: users-service-key.pem
              readOnly: true
            - name: kafka-client-secrets
              mountPath: /etc/kafka/secrets/users-service-certificate.pem
              subPath: users-service-certificate.pem
              readOnly: true
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
            runAsNonRoot: true
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "200m"
      volumes:
        - name: kafka-client-secrets
          secret:
            secretName: users-service-kafka-secrets
---
apiVersion: v1
kind: Service
metadata:
  name: users-service
  namespace: microservices
spec:
  ports:
    - port: 3001
  selector:
    app: users-service
